fix - footer - row gap

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,7 +20,7 @@
     align-items: center;
     font-size: 12px;
     max-width: 167px;
-    margin-top: 4px;
+    margin-top: 6.5px;
 }
 
 #footer-social {
